syntax = "proto3";

package strategy;

import "models/strategy/strategy.proto";
import "models/util/local_timestamp.proto";
import "models/util/decimal_value.proto";
import "models/util/uuid.proto";

option java_multiple_files = true;
option java_package = "common.models.strategy";
option java_outer_classname = "StrategyAllocationProtos";

message MapFieldEntry {
  StrategyProto key = 1;
  util.DecimalValueProto value = 2;
}

message StrategyAllocationProto {
  string object_class = 1;
  string version = 2;

  //Primary Key
  util.UUIDProto uuid = 5;
  util.LocalTimestampProto as_of = 6;
  bool is_link = 7;

  //Map
  repeated MapFieldEntry allocations = 10;
}

